--- a/source/MonitoringClient/View/CustomerDetailView.xaml
+++ b/source/MonitoringClient/View/CustomerDetailView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-  x:Class="MonitoringClient.View.CustomerDetail"
+  x:Class="MonitoringClient.View.CustomerDetailView"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,6 +12,8 @@
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="0.3*" />
       <ColumnDefinition Width="0.4*" />
+      <ColumnDefinition Width="0.1*" />
+
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
       <RowDefinition Height="0.1*" />
@@ -81,6 +83,23 @@
       Height="20"
       VerticalAlignment="center"
       Text="{Binding Phone, Mode=TwoWay}" />
+    <Button
+      Name="phoneOkBtn"
+      Grid.Row="3"
+      Grid.Column="2"
+      Width="100"
+      Margin="2"
+      Padding="2"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center"
+      Background="#FFFFFBFB"
+      BorderThickness="0"
+      Command="{Binding PhoneOkCommand}"
+      FontSize="12"
+      TabIndex="0"
+      ToolTip="go back to Custromer View">
+      Show
+    </Button>
     <Label
       Grid.Row="4"
       Grid.Column="0"
