--- a/source/MonitoringClient/View/CustomerView.xaml
+++ b/source/MonitoringClient/View/CustomerView.xaml
@@ -15,10 +15,50 @@
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
       <RowDefinition Height="0.05*" />
-      <RowDefinition Height="0.05*" />
+      <RowDefinition Height="0.005*" />
       <RowDefinition Height="0.5*" />
-      <RowDefinition Height="0.05*" />
+      <RowDefinition Height="0.005*" />
     </Grid.RowDefinitions>
+    <StackPanel
+      Grid.Row="0"
+      Grid.Column="0"
+      Orientation="Horizontal">
+      <TextBox
+        Width="300"
+        Height="20"
+        Margin="5,5,0,0"
+        HorizontalAlignment="Left"
+        DockPanel.Dock="Top"
+        Text="{Binding FilterText}" />
+      <Button
+        Name="searchBtn"
+        Width="100"
+        Height="25"
+        Margin="15,5,0,0"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Center"
+        Background="#FFFFFBFB"
+        BorderThickness="0"
+        Command="{Binding SearchCommand}"
+        Content="Search"
+        FontSize="14"
+        TabIndex="0"
+        ToolTip="Search Customer/s" />
+      <Button
+        Name="clearBtn"
+        Width="100"
+        Height="25"
+        Margin="15,5,0,0"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Background="#FFFFFBFB"
+        BorderThickness="0"
+        Command="{Binding ClearCommand}"
+        Content="Clear"
+        FontSize="14"
+        TabIndex="1"
+        ToolTip="Clear customer search filter" />
+    </StackPanel>
 
     <StackPanel
       Grid.Row="2"
